seedbox/prowlarr/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: seedbox
spec:
  hostnames:
    - "prowlarr.${env}.${domain}"
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: internal-https
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
